--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -7,11 +7,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "build": "vite build",
+  "dev": "vite",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "postinstall": "npm i -D @rollup/rollup-linux-x64-gnu"
+},
   "dependencies": {
     "@grammarly/editor-sdk": "^2.5.5",
     "@headlessui/react": "^2.2.0",
